Menambahkan tulisan dibawah dan memberi cursor pada button sign up free

--- a/index.html
+++ b/index.html
@@ -44,5 +44,19 @@
 </svg> SIGN UP FREE</button>
 		</div>
 	</div>
+	<div class="container-tiga">
+		<div class="header1">
+			<h3>Lorem ipsum dolor sit amet.</h3>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium facere recusandae voluptate unde nobis omnis quidem voluptatum modi, quae praesentium!</p>
+		</div>
+		<div class="header2">
+			<h3>Lorem ipsum, dolor.</h3>
+			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iusto suscipit cumque omnis vero laboriosam?</p>
+		</div>
+		<div class="header3">
+			<h3>Lorem ipsum dolor sit</h3>
+			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo atque ut ab eos ea velit, molestias debitis autem et, nihil dolor?</p>
+		</div>
+	</div>
 </body>
 </html>
