Merubah font dan memperbaiki tampilan

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tour & Travel</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Vampiro+One&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="blog">
@@ -46,7 +47,7 @@
 	</div>
 	<div class="container-tiga">
 		<div class="header1">
-			<h3>Lorem ipsum dolor sit amet.</h3>
+			<h3>Lorem ipsum</h3>
 			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium facere recusandae voluptate unde nobis omnis quidem voluptatum modi, quae praesentium!</p>
 		</div>
 		<div class="header2">
